--- a/urban-dictionary-spell-checker/urban-dictionary-spell-checker.csproj
+++ b/urban-dictionary-spell-checker/urban-dictionary-spell-checker.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MongoDB.Bson" Version="2.11.6" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
